# tetris

./: .gitignore  CMakeLists.txt  README.md  TODO
doc/: .$class_diagram.drawio.bkp  Untitled 1.ods  class_diagram.drawio  text
res/: piramid_field.txt  playfield_layout.ods  resources.json  standard_field.txt  tetris.odt
src/: block.cpp  block.h  field.cpp  field.h  field_description.cpp  game.cpp  game.h  global.h  level.cpp  level.h  main.cpp  menu.cpp  player.cpp  player.h  player_profile.cpp  player_profile.h  resource_manager.cpp  resource_manager.hpp  sound_manager.cpp  sound_manager.h  state.cpp  state.h  state_gameover.cpp  state_menu.cpp  state_paused.cpp  state_playing.cpp  tile.cpp  tile.h  ui.cpp  ui.h
src/include/: field.h  field_description.h  game.h  global.h  level.h  menu.h  player_profile.h  resource_manager.hpp  state.h  tile.h
